--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -148,7 +148,7 @@ img.catched {
 }
 
 .delete-button:hover {
-  //scale: 1.1;
+  scale: 1.3;
   filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px 2px 0 rgba(0, 0, 0, 0.2))
     drop-shadow(2px -2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px -2px 0 rgba(0, 0, 0, 0.2));
 }
@@ -182,7 +182,6 @@ img.catched {
   align-items: center;
 
   height: 60%;
-  //padding-top: 5px;
 }
 
 // details rows
@@ -251,17 +250,6 @@ img.catched {
 .pointer {
   cursor: pointer;
 }
-// .poke-type-container li::before {
-//   content: "•";
-//   color: red;
-//   display: inline-block;
-//   width: 1em;
-//   margin-left: -1em;
-// }
-
-// .poke-type-container li {
-//   font-size: 1.7em;
-// }
 
 
 
