--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,7 +1,7 @@
 <div id="top-container">
     <div id="trainer-welcoming-container">
-        <h2>Welcome Ash!</h2>
-        <p>Here you can find all your catched Pokémons</p>
+        <h2>Welcome {{username}}!</h2>
+        <p>Here you can find all your caught Pokémon</p>
     </div>
 </div>
 <app-trainer-pokemon-card-list></app-trainer-pokemon-card-list>
