--- a/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
+++ b/src/app/components/pokemon-card-list/pokemon-card-list.component.scss
@@ -1,11 +1,13 @@
 
 .grid {
-    padding: 3%;
+    padding: 2%;
     margin-bottom: 20px;
+    margin-right: 20px;
+
     //background-color: rgba(0, 0, 0, 0.5);
     //border-radius: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 3fr));
     grid-gap: 50px;
  }
  .row {
