--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -14,6 +14,7 @@
         #trainerName="ngModel"
         required
         minlength="3"
+        maxlength="20"
         placeholder="Ash Ketchum"
       />
       <p *ngIf="trainerName.errors?.['required']" class="login-form-error">
