--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -8,6 +8,8 @@ header {
     padding-bottom: 25px;
     margin-top: 20px;
     margin-bottom: 60px;
+    user-select: none;
+
 }
 
 nav.header-nav {
@@ -59,6 +61,7 @@ a.trainer-action img {
 div.art-change {
     border-left: 1px solid rgba(255, 255, 255, 0.4);
     padding-left: 20px;
+    cursor: pointer;
 }
 
 div.trainer {
