--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -107,7 +107,7 @@
 
   color: #ffcc00;
   text-shadow: 2px 0 #2D6AB3, -2px 0 #2D6AB3, 0 2px #2D6AB3, 0 -2px #2D6AB3,
-             1px 1px #2D6AB3, -1px -1px #2D6AB3, 1px -1px #2D6AB3, -1px 1px #2D6AB3;
+    1px 1px #2D6AB3, -1px -1px #2D6AB3, 1px -1px #2D6AB3, -1px 1px #2D6AB3;
 }
 
 .card-button {
@@ -140,11 +140,10 @@ img.catched {
 
 .delete-button:hover {
   scale: 1.3;
-  filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px 2px 0 rgba(0, 0, 0, 0.2))
-    drop-shadow(2px -2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px -2px 0 rgba(0, 0, 0, 0.2));
+  filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px 2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(2px -2px 0 rgba(0, 0, 0, 0.2)) drop-shadow(-2px -2px 0 rgba(0, 0, 0, 0.2));
 }
 
-.pokemon-details-img-container{
+.pokemon-details-img-container {
   user-select: none;
 }
 
@@ -160,11 +159,9 @@ img.catched {
   justify-content: center;
   align-items: center;
 
-  background: linear-gradient(
-    to bottom right,
-    var(--grass-type-color),
-    var(--poison-type-color)
-  );
+  background: linear-gradient(to bottom right,
+      var(--grass-type-color),
+      var(--poison-type-color));
 }
 
 #poke-details-container {
@@ -218,7 +215,7 @@ img.catched {
 }
 
 #entries-button:hover {
-  scale: 1.1;
+  scale: 1.2;
 }
 
 // Second row
@@ -255,27 +252,30 @@ img.catched {
 
 
 
-.poke-ball-button.disabled{
+.poke-ball-button.disabled {
   filter: brightness(0.6);
   pointer-events: none;
 }
+
 .poke-ball-button:hover {
-  filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white)
-    drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
+  filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white) drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
 }
 
-.poke-ball-button-pixel{
+.poke-ball-button-pixel {
   background-image: url('../../../assets/images/PokeballClosed.png');
 
 }
+
 .poke-ball-button-drawn {
   background-image: url('../../../assets/images/AltPokeballClosed2.png');
 }
+
 .poke-ball-button-pixel.animate {
   animation: buttonAnimation 3s 1, buttonAnimation2 1s 3 3s,
     buttonAnimation3 1s 1 6.5s;
   pointer-events: none;
 }
+
 .poke-ball-button-drawn.animate {
   animation: altButtonAnimation 3s 1, buttonAnimation2 1s 3 3s,
     buttonAnimation3 1s 1 6.5s;
@@ -289,21 +289,25 @@ img.catched {
     pointer-events: none;
     background-image: url("../../../assets/images/PokeballOpen1.png");
   }
+
   20% {
     height: 96px;
     background-image: url("../../../assets/images/PokeballOpen2.png");
   }
+
   65% {
     height: 96px;
     transform: translateY(0px);
 
     background-image: url("../../../assets/images/PokeballOpen2.png");
   }
+
   66% {
     background-image: url("../../../assets/images/PokeballClosed.png");
     height: 75px;
     pointer-events: all;
   }
+
   70% {
     transform: translateY(25px);
   }
@@ -316,21 +320,25 @@ img.catched {
     pointer-events: none;
     background-image: url("../../../assets/images/AltPokeballOpen.png");
   }
+
   20% {
     height: 110px;
     background-image: url("../../../assets/images/AltPokeballOpen.png");
   }
+
   65% {
     height: 110px;
     transform: translateY(0px);
 
     background-image: url("../../../assets/images/AltPokeballOpen.png");
   }
+
   66% {
     background-image: url("../../../assets/images/AltPokeballClosed2.png");
     height: 75px;
     pointer-events: all;
   }
+
   70% {
     transform: translateY(25px);
   }
@@ -340,18 +348,23 @@ img.catched {
   0% {
     transform: rotate(0);
   }
+
   10% {
     transform: rotate(-15deg);
   }
+
   20% {
     transform: rotate(15deg);
   }
+
   30% {
     transform: rotate(-15deg);
   }
+
   50% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(0);
   }
@@ -361,6 +374,7 @@ img.catched {
   0% {
     filter: brightness(1);
   }
+
   100% {
     filter: brightness(0.6);
   }
@@ -373,19 +387,20 @@ img.catched {
   opacity: 0;
   height: 10px;
   width: 10px;
-  
+
   left: 42%;
   top: 7%;
   filter: drop-shadow(12px 12px 7px rgba(0, 0, 0, 0.5));
 }
 
-.poke-ball-dot-pixel{
+.poke-ball-dot-pixel {
   border-radius: 10%;
 }
 
-.poke-ball-dot-drawn{
+.poke-ball-dot-drawn {
   border-radius: 50%;
 }
+
 .pokeBallDot.animate {
   animation: pokeBallDotAnimation 0.8s linear;
 }
@@ -423,24 +438,24 @@ img.catched {
   30% {
     transform: translateY(-50px) scale(0.4, 1.2);
 
-    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black)
-    drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
+    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
   }
+
   60% {
     transform: translateY(-100px) scale(0.4, 1.2);
-    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black)
-    drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
+    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
     overflow: hidden;
   }
+
   70% {
     transform: translateY(500px) scale(0.4, 1.2);
   }
+
   100% {
     z-index: 1;
     overflow: hidden;
     transform: translateY(500px) scale(0.4, 1.2);
-    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black)
-    drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
+    filter: brightness(0) invert(1) drop-shadow(1px 1px 0 black) drop-shadow(-1px 1px 0 black) drop-shadow(1px -1px 0 black) drop-shadow(-1px -1px 0 black);
   }
 }
 
@@ -449,18 +464,21 @@ img.catched {
   0% {
     content: "Loading";
   }
+
   25% {
     content: "Loading.";
   }
+
   50% {
     content: "Loading..";
   }
+
   75% {
     content: "Loading...";
   }
 }
 
-.loading-dots::after  {
+.loading-dots::after {
   content: "Loading";
   animation: loading-dots 0.8s infinite;
 }
@@ -469,6 +487,7 @@ img.catched {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
