--- a/src/app/components/pokemon-search-form/pokemon-search-form.component.scss
+++ b/src/app/components/pokemon-search-form/pokemon-search-form.component.scss
@@ -1,4 +1,4 @@
-#reset-image{
+#reset-image {
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -23,7 +23,7 @@
 
 #search-form {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
 #search-container {
@@ -31,7 +31,8 @@
     align-items: center;
 }
 
-#search-container input, #search-container button {
+#search-container input,
+#search-container button {
     height: 50px;
     border-radius: 40px;
     margin: 5px 10px;
